src/test/ui/pattern/usefulness/match-slice-patterns.stderr
error[E0004]: non-exhaustive patterns: `&[_, Some(_), .., None, _]` not covered
  --> $DIR/match-slice-patterns.rs:2:11
   |
LL |     match list {
   |           ^^^^ pattern `&[_, Some(_), .., None, _]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&[std::option::Option<()>]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
